<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>life.qbic</groupId>
    <artifactId>datamanager</artifactId>
    <version>0.32.0</version>
  </parent>

  <groupId>life.qbic.identity</groupId>
  <artifactId>project-management-infrastructure</artifactId>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-commons</artifactId>
    </dependency>
    <dependency>
      <groupId>life.qbic</groupId>
      <artifactId>project-management</artifactId>
      <version>0.32.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>life.qbic</groupId>
      <artifactId>openbis-api</artifactId>
      <version>19.06.5</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>life.qbic</groupId>
      <artifactId>openbis-client-lib</artifactId>
      <version>1.6.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.spockframework</groupId>
      <artifactId>spock-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jms</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-jpa</artifactId>
    </dependency>
  </dependencies>

</project>
